--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@svgr/webpack": "^6.2.1",
     "autoprefixer": "^10.4.2",
     "clsx": "^1.1.1",
     "next": "12.0.10",
+    "next-compose-plugins": "^2.2.1",
+    "next-plugin-svgr": "^1.1.1",
     "postcss": "^8.4.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
